<resources>
    <string name="app_name">BC-STOCKS</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="receives">Receiving</string>
    <string name="inventory">Inventory</string>
    <string name="transfer">Transfer</string>
    <string name="menu">Menu</string>
    <string name="changeLocation">Change of location</string>
    <string name="orders">Orders</string>
    <string name="work_orders">Work orders</string>
    <string name="logOut">Log out</string>
    <string name="login">Log in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="purchase_order">Purchase order</string>
    <string name="supplier">Supplier</string>
    <string name="carrier">Carrier</string>
    <string name="signIn">Sign In</string>
    <string name="comments">Comments</string>
    <string name="loginMessage">Enter your credentials to continue</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="bctagsCopyrights">BC-Tags 2023. All rights reserved</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="title_activity_drawer_view">DrawerViewActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="location">Location</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="invoice">Invoice</string>
    <string name="tasks">Tasks</string>
    <string name="search">Search</string>
    <string name="number">Number</string>
    <string name="date">Date</string>
    <string name="reset">Reset</string>
    <string name="list">List</string>
    <string name="image_description">Image description</string>
    <string name="client">Client</string>
    <string name="po_reference">Po Reference</string>
    <string name="po">PO</string>
    <string name="view">View</string>
    <string name="pick">Pick</string>
    <string name="delivery_date">Delivery date</string>
    <string name="create_date">Create date</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="units">Units</string>
    <string name="work_order">Work order</string>
    <string name="picking">Picking</string>
    <string name="next">Next</string>
    <string name="order">Order</string>
    <string name="complete">Complete</string>
    <string name="locations">Locations</string>
    <string name="move_to">Move to</string>
    <string name="check_location">Scan location barcode</string>
    <string name="packing">Packing</string>
    <string name="finish_picking">Finish Picking</string>
    <string name="finish_packing">Finish Packing</string>
    <string name="qty_pack">Qty to pack</string>
    <string name="new_pack">New pack</string>
    <string name="packed">Packed</string>
    <string name="type_package">Type of package</string>
    <string name="shipping">Shipping</string>
    <string name="tracking_number">Tracking number</string>
    <string name="branch">Branch</string>
    <string name="branch_change">Branch change</string>
    <string name="total">Total</string>
    <string name="page_init">Page 1</string>
    <string name="list_items_locations">List of item locations</string>
    <string name="selected_qty">Selected Qty</string>
    <string name="by_location">By location</string>
    <string name="by_item">By item</string>
    <string name="location_origin">Origin</string>
    <string name="location_destination">Destination</string>
    <string name="title_location_list_items">Items in location </string>
    <string name="inventory_count">Inventory count</string>
    <string name="delete">Delete</string>
    <string name="add_location">Add location</string>
    <string name="qty">Qty</string>
    <string name="s_qty">S. Qty</string>
    <string name="transfers">Transfers</string>
    <string name="transfers_list">Transfers list</string>
    <string name="new_transfer">New transfer</string>
    <string name="transfer_to">Transfer to</string>
    <string name="select_items">Select items</string>
    <string name="list_of">List of</string>
    <string name="finish">Finish</string>
    <string name="status">Status</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="new_receive">New receive</string>
    <string name="reader_epc">Read tags</string>

    <string name="scan">Scan</string>
    <string name="stop_scan">Stop scanning</string>
    <string name="stop">Stop</string>

    <string name="items">Items</string>
    <string name="order_qty">Order qty</string>
    <string name="quantity">Quantity</string>
    <string name="item">Item</string>


    <string name="error_message">Something has gone wrong, check your data or try again later.</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="success_message">Data successfully saved.</string>
    <string name="test">Test</string>
    <string name="scanned">Scanned</string>


    <string name="common_settings">Common settings</string>
    <string name="working_mode">Working mode</string>
    <string name="set_frequency">Set frequency</string>
    <string name="get_frequency">Get frequency</string>
    <string name="output_power">Output power(dBm)</string>
    <string name="set_power">Set power</string>
    <string name="get_power">Get power</string>
    <string name="protocol">Protocol (Only R2000)</string>
    <string name="set_protocol">Set protocol</string>
    <string name="rflink">RFLink</string>
    <string name="set_link">Set link parameters</string>
    <string name="get_link">Get link parameters</string>
    <string name="send">Send</string>


</resources>