<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/white"
    android:paddingVertical="10dp"
    android:paddingHorizontal="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <TextView
        android:id="@+id/tvItemDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/item"
        android:gravity="center_vertical"
        android:fontFamily="@font/avenir_medium"
        android:textSize="16sp"
        android:layout_weight="4"
        android:textColor="@color/black"

        />
    <TextView
        android:id="@+id/tvPicked"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/order_qty"
        android:gravity="center_vertical"
        android:fontFamily="@font/avenir_medium"
        android:textSize="16sp"
        android:layout_weight="3"
        android:textColor="@color/gray"

        />
    <TextView
        android:id="@+id/tvQuantityToPack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/quantity"
        android:gravity="center_vertical"
        android:fontFamily="@font/avenir_medium"
        android:textSize="16sp"
        android:layout_weight="2"
        android:textColor="@color/gray"
        />

</LinearLayout>