<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:paddingVertical="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTransfer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/avenir_medium"
            android:gravity="start|center_vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:text="@string/transfer" />

        <TextView
            android:id="@+id/tvBranch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:fontFamily="@font/avenir_medium"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:text="@string/branch" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:fontFamily="@font/avenir_medium"
            android:gravity="center"
            android:text="@string/status"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:fontFamily="@font/avenir_medium"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:text="@string/date" />

        <TextView
            android:id="@+id/tvAction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="@font/avenir_medium"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp" />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:background="@color/light_gray"
        android:textColor="@color/black"
        android:textSize="16sp" />

</LinearLayout>