<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/dialog_bg"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        >
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:cornerRadius="43dp"
            android:layout_width="85dp"
            android:layout_height="85dp"
            app:cardElevation="0dp"
            android:gravity="center_horizontal"
            android:backgroundTint="@color/green_success"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/ic_done"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="@color/white"
            app:iconSize="70dp"
            />
    </FrameLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_heavy"
        android:textSize="30sp"
        android:text="@string/success"
        android:textColor="@color/black"
        android:paddingVertical="5dp"
        android:gravity="center"
        android:layout_gravity="center"
        />
    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_black"
        android:textSize="20sp"
        android:text="@string/success_message"
        android:textColor="@color/black"
        android:paddingVertical="5dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeColor="@color/black"
        android:text="@string/done"
        android:textColor="@color/black"
        app:strokeWidth="1dp"
        app:cornerRadius="30dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        />


</LinearLayout>